# data-mining

./: aire.db  debug_supabase.py  pyproject.toml  requirements.txt
aire/: __init__.py
aire/ai/: benchmarks.py  evaluations.py  incidents.py
aire/analysis/models/: risk_model.py
aire/bio/: benchmarks.py  evaluations.py  incidents.py
aire/config/: settings.py
aire/data/: accessors.py
aire/data/collectors/: base_collector.py
aire/data/processors/: base_processor.py  incidents_processor.py
aire/data/storage/: database.py
aire/loss_of_control/: benchmarks.py  evaluations.py  incidents.py
aire/utils/: logging_config.py  validators.py
examples/: advanced_analysis.py  basic_usage.py  query_examples.py
scripts/: inspect_schema.py  query_remote_schema.py  setup_database.py
