[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aire"
version = "0.1.0"
description = "AI Risk Explorer - Data mining for AI, Bio, and Loss of Control risks"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "requests>=2.28.0",
    "sqlalchemy>=1.4.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "arxiv>=1.4.0",
    "newsapi-python>=0.2.7",
    "biopython>=1.79",
    "wikipedia-api>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aire*"]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503"]